feat(cache): B4 DISK 缓存闭环 + playerScoped 键 + 缓存种子 + 关屏回写
- util/AtomicFiles：ConfigIO.atomicWrite 提取共用；DiskCacheStore.save 改原子写（§11.2）
- ContainerMemoryStore 注入 DiskCacheStore：remember(DISK) 同步落盘；
  getValid/isExplored 带预期类型，内存缺失回源磁盘回填；invalidate 双清；
  内存已有条目（含 TTL 超期）不回源（磁盘同龄，强制重扫）
- 生产装配 DiskCacheStore（cache/<worldId>/）；DISK 重启重新加载（§3.8 达成）
- playerScoped 缓存键：DetectorResolver 共用解析，引擎 keyOf/命令 memory
  仅对 playerScoped 容器（末影箱）附 playerUUID（playerScoped() 死 API 复活）
- 缓存种子（§5.7）：标记模式真实扫描后按容器 cacheType remember
- 关屏回写（§5.4/§8.7）：ContainerProtocol.open 接收 closeScanSink，
  玩家手动关箱也真实扫描回写缓存
- JVM：DiskCacheClosureTest 5 例（跨实例回源/双清/TTL/MEMORY 不落盘）；
  gametest③ 补标记种子断言